# legis-entropy

./: docker-compose.yml
app/: globals.css  layout.tsx
components/: document-comparison.tsx  graph-legend.tsx  graph-visualization.tsx  header.tsx  inspector.tsx
design-example/app/: page.tsx
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  constants.ts  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: AnalysisProgress.tsx  ComparePanel.tsx  CorpusReviewPanel.tsx  ErrorState.tsx  Graph.tsx  InspectorPanel.tsx  LegendPanel.tsx  LoadingOverlay.tsx  Logo.tsx  NavigationBar.tsx  SearchBar.tsx  SearchPanel.tsx  Sidebar.tsx
frontend/src/hooks/: useAnalysisStream.ts  useCompare.ts  useCorpusReview.ts  useGraphData.ts  useSearch.ts  useTheme.ts
java_backend/: .project  Dockerfile  build.gradle.kts  settings.gradle.kts
java_backend/src/main/java/kz/legis/entropy/: Application.java
java_backend/src/main/java/kz/legis/entropy/config/: CacheConfig.java  RouterConfig.java  WebClientConfig.java
java_backend/src/main/java/kz/legis/entropy/domain/: AnalysisEvent.java  CompareRequest.java  CompareResult.java  CorpusStats.java  GraphData.java  GraphNode.java  Issue.java  SearchRequest.java
java_backend/src/main/java/kz/legis/entropy/handler/: AnalysisHandler.java  GraphHandler.java
java_backend/src/main/java/kz/legis/entropy/service/: AnalysisStreamService.java  MlClient.java  RustClient.java  StatsService.java
java_backend/src/main/resources/: application.yml
ml/: Cargo.toml  Dockerfile  README.md
ml/src/: db.rs  main.rs  server.rs  worker.rs
ml/src/data/: analyzer.rs  error.rs  fetcher.rs  graph.rs  ml_client.rs  mod.rs  model.rs  parser.rs  tfidf.rs
ml_service/: Dockerfile  analyzer.py  config.py  llm.py  main.py  models.py  requirements.txt
